--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,16 +1,16 @@
 name: Generate Snake Animation
 
 on:
-    schedule: # every 12 hours
+    schedule:
         - cron: '0 */12 * * *'
     workflow_dispatch:
 
 jobs:
-    build:
+    generate:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repo
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Generate snake.svg
               uses: Platane/snk@v3
@@ -18,10 +18,9 @@ jobs:
                   github_user_name: khangvu0
                   outputs: dist/snake.svg
 
-            - name: Push snake.svg to output branch
-              uses: crazy-max/ghaction-github-pages@v3
+            - name: Upload to output branch
+              uses: peaceiris/actions-gh-pages@v3
               with:
-                  target_branch: output
-                  build_dir: dist
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_branch: output
+                  publish_dir: dist
