--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,27 +1,30 @@
 name: Generate Snake Animation
 
 on:
-    schedule: # every 12 hours
-        - cron: '0 */12 * * *'
+    schedule:
+        - cron: '0 */12 * * *' # runs every 12 hours
     workflow_dispatch:
 
 jobs:
-    build:
+    generate:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repo
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Generate snake.svg
               uses: Platane/snk@v3
               with:
                   github_user_name: khangvu0
                   outputs: dist/snake.svg
+                  snake_color: '#22c55e' # green snake
+                  apple_color: '#ff4d4d' # red food
+                  background: '#0d1117' # GitHub dark background
+                  grid_color: '#161b22' # dark grey tiles
 
-            - name: Push snake.svg to output branch
-              uses: crazy-max/ghaction-github-pages@v3
+            - name: Upload to output branch
+              uses: peaceiris/actions-gh-pages@v3
               with:
-                  target_branch: output
-                  build_dir: dist
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_branch: output
+                  publish_dir: dist
